--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,62 +6,80 @@
     color: #fff;
 }
 
-body{
+body {
     overflow: hidden;
 }
 
-nav{
+nav {
     margin: 1em 5em;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.headimg{
+.headimg {
     width: auto;
     height: 1.75em;
 }
 
-nav ul{
+nav ul {
     display: flex;
     justify-content: flex-end;
     padding: 1em 2em;
+    align-items: center;
 }
 
-nav ul li{
+nav ul li {
     list-style: none;
     padding: 1em 2em;
 }
 
-nav ul li a{
+nav ul li a {
     text-decoration: none;
     text-transform: uppercase;
     font-size: 0.9em;
 }
 
-.main{
-    margin: 1em 5em;
+.main {
+    padding: 0 5rem;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.line-button {
     display: flex;
     flex-direction: column;
-    width: 25%;
 }
 
-.mainc{
+.line {
+    margin: .2rem;
+    width: .5rem;
+    background-color: #c0c0c0;
+    height: 9.5rem;
+    border-top-left-radius: .25rem;
+    border-bottom-left-radius: .25rem;
+    opacity: 0.2;
+    transition: 1s;
+}
+
+.mainc {
     position: relative;
     top: 7em;
+    width: 30%;
 }
 
-.main h1{
+.main h1 {
     font-size: 2.6em;
     line-height: 1.2em;
 }
 
-.main p{
+.main p {
     position: relative;
     top: 0.35em;
 }
 
-.mbnt{
+.mbnt {
     font-weight: 700;
     padding: 0.7em 2em;
     border: none;
@@ -72,7 +90,7 @@ nav ul li a{
     background-color: rgb(122, 156, 221);
 }
 
-.mbnt2{
+.mbnt2 {
     font-weight: 700;
     padding: 0.5em 0.5em;
     border: 0.1em solid #fff;
@@ -84,11 +102,11 @@ nav ul li a{
     background-color: transparent;
 }
 
-.img{
+.img {
     width: 100%;
     height: 100vh;
     position: absolute;
-    /* top: 0; */
+    top: 0;
     z-index: -300;
     transition: 1s;
 }
